# tychon

./: .gitignore  CMakeLists.txt  LICENCE.txt  Makefile  Makefile.inc  README.md
src/common/: ESolverCommon.hpp  ESolverForwardDecls.hpp  PrimitiveTypeDefs.hpp
src/descriptions/: Grammar.cpp  Grammar.hpp  Operators.hpp
src/expressions/: UserExpression.cpp  UserExpression.hpp
src/main-solvers/: SynthLib2Solver.cpp  SynthLib2Solver.hpp
src/scoping/: ESolverScope.cpp  ScopeManager.cpp
src/solvers/: CEGSolver.cpp  CEGSolver.hpp  ESolver.cpp  ESolver.hpp
src/solverutils/: ConcreteEvaluator.cpp  ConcreteEvaluator.hpp  DecisionTreeExprBuilder.cpp  DecisionTreeExprBuilder.hpp  DecisionTreeNode.cpp  DecisionTreeNode.hpp
src/synthlib2parser/: .gitignore  Makefile.inc
src/utils/: TextUtils.hpp
src/values/: ConcreteValueBase.cpp  ConcreteValueBase.hpp
src/visitors/: DecisionTreeNodeLocator.cpp  DecisionTreeNodeLocator.hpp  ExpCheckers.cpp  ExpressionSizeCounter.cpp  ExpressionSizeCounter.hpp  PBEConsequentsInitializer.cpp  PBEConsequentsInitializer.hpp  PBEDecisionTreeNodeLocator.cpp  PBEDecisionTreeNodeLocator.hpp  SpecRewriter.cpp  SpecRewriter.hpp
src/z3interface/: TheoremProver.hpp  Z3Objects.cpp  Z3Objects.hpp  Z3TheoremProver.cpp  Z3TheoremProver.hpp
